--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/Configurations.resx
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/Configurations.resx
@@ -119,7 +119,7 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="ClusterManager" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\clustermanager.hocon;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>Resources\clusterManager.hocon;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="Empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\empty.hocon;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
